# content-archiver

./: .gitignore  INSTRUCTIONS.md  NOTES.md  PLAN.md  README.md  pinballnews_urls.txt  pyproject.toml  retry_audio_urls.txt  test_batch.txt  test_urls.txt
archiver/: __init__.py  cli.py  detector.py
kaneda transcripts/: 001_Kanedas_Pinball_Podcast_Saturday_Morning_Spectacular_Jan_10.mp4.transcript.md  002_Kanedas_Alice_Reveal_Party.mp4.transcript.md  003_The_2024_Kaneda_Kudos_Pinball_Awards_Saturday_Morning_Spectacular.mp4.transcript.md  004_Saturday_Morning_Spectacular.mp4.transcript.md  005_Kaneda_Reacts_to_Dune_Pinball.mp4.transcript.md  006_Kaneda_Kong_Reaction.mp4.transcript.md  007_Saturday_Morning_Spectacular_May_17.mp4.transcript.md  008_JJP_Harry_Potter_Live_Reaction.mp4.transcript.md  009_Kanedas_Pinball_Podcast_2025_Kudos_Awards_Show.mp4.transcript.md  010_Stern_Dungeons_Dragons_FIRST_IMPRESSION_LIVE.mp4.transcript.md  011_Lets_Talk_Potter_Playfield.mp4.transcript.md  012_Saturday_Morning_Spectacular.mp4.transcript.md  013_Watch_KANEDAS_LIVE_reaction_to_seeing_Beetlejuice_Pinball_for_the_FIRST_TIME.mp4.transcript.md  014_Kanedas_Sunday_Morning_Service.mp4.transcript.md  015_Saturday_Morning_Spectacular.mp4.transcript.md  016_Kanedas_Sunday_Morning_Service.mp4.transcript.md  017_Saturday_Morning_Spectacular_Take_2.mp4.transcript.md  018_Saturday_Morning_Spectacular_June_7.mp4.transcript.md  019_Saturday_Morning_Spectacular_Dec_14.mp4.transcript.md  01_Lets talk Pat Lawlor.mp4.transcript.md  020_Kaneda_Sunday_Morning_Spectacular.mp4.transcript.md  (+1458 more)
(+853 files in other folders)
