[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content-archiver"
version = "0.1.0"
description = "Archive content from any URL - YouTube, podcasts, forums, articles, or entire websites"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Content Archiver"}
]
keywords = ["archiver", "youtube", "podcast", "scraper", "backup"]

dependencies = [
    "click>=8.0",
    "yt-dlp>=2024.0",
    "feedparser>=6.0",
    "requests>=2.28",
    "rich>=13.0",
    "mutagen>=1.46",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "readability-lxml>=0.8",
    "markdownify>=0.11",
]

[project.scripts]
archiver = "archiver.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
